* put previous logo settings back (float messes with rtl) * put in IE spacing fixes (logo, hiddenStructure) * removed float from div.cell, so livesearch and display menu don't fall   behind other items in IE8 http://dev.plone.org/plone/ticket/10872
svn path=/plonetheme.sunburst/trunk/; revision=39149

--- a/plonetheme/sunburst/skins/sunburst_styles/IEFixes.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/IEFixes.css
@@ -6,3 +6,20 @@
     https://dev.plone.org/plone/ticket/10417
 */
 
+/* removes extra space above logo */
+#portal-logo {
+    margin-top: 0;
+}
+
+/* ensures hidden elements don't take up space */
+.hiddenStructure {
+    position: absolute;
+}
+
+/* IE8: keeps livesearch from falling behind content area,
+   and display menu from falling behind footer
+   Keeping float for IE7, so the portlets don't fall */
+div.cell {
+    float: none;
+    *float: left;
+}
